--- a/e9.html
+++ b/e9.html
@@ -33,13 +33,13 @@
             <!-- Python Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=nKzEJWbkPbQ"><img src="thumbnail\th25.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=nKzEJWbkPbQ"><img src="th25.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Insertion Sort Algorithm Made Simple</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@programmingwithmosh"><img src="pfp/channels4_profile.jpg" 
+                            <a href="https://www.youtube.com/@programmingwithmosh"><img src="channels4_profile.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -54,13 +54,13 @@
             <!-- JavaScript Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=6LOwPhPDwVc"><img src="thumbnail/th26.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=6LOwPhPDwVc"><img src="th26.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">12. Searching and Sorting</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@mitocw"><img src="pfp\pfp21.jpg" 
+                            <a href="https://www.youtube.com/@mitocw"><img src="pfp21.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
@@ -77,13 +77,13 @@
             <!-- HTML/CSS Video -->
             <article class="video-card">
                 <div class="thumbnail-container">
-                    <a href="https://www.youtube.com/watch?v=b_NjndniOqY"><img src="thumbnail/th27.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
+                    <a href="https://www.youtube.com/watch?v=b_NjndniOqY"><img src="th27.avif" alt="Introduction to Python Programming Tutorial Thumbnail" class="thumbnail" loading="lazy"></a>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Learn Tree traversal</h3>
                     <div class="video-meta">
                         <div class="channel-avatar" aria-hidden="true">
-                            <a href="https://www.youtube.com/@BroCodez"><img src="pfp/pfp22.jpg" 
+                            <a href="https://www.youtube.com/@BroCodez"><img src="pfp22.jpg" 
                                 alt="Profile Picture"
                                 style="width: 45px; height: 45px; border-radius: 50%; object-fit: cover;"></a>
                         </div>
