--- a/e13.html
+++ b/e13.html
@@ -8,6 +8,13 @@
         gtag('js', new Date());
         gtag('config', 'G-060C5XH0S8');
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-060C5XH0S8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-060C5XH0S8');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Coding-EduMaster - Learn programming through high-quality video tutorials">
