--- a/donate.html
+++ b/donate.html
@@ -34,8 +34,8 @@
         <div>
             <h1>
                 <strong>
-                    Thank you for your willingness to support me financially. 
-                    I truly appreciate your generosity. 
+                    Thank you for your willingness to support us financially. 
+                    We truly appreciate your generosity. 
                     However, this feature is not available yet. 
                     Stay tuned for updates!
                 </strong>
