--- a/e1.html
+++ b/e1.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main-content">
-        <h1 style="color: #2596be;">Best programming courses :</h1>
+        <h1 style="color: #2596be;">Best languages courses :</h1>
         <div class="video-grid">
             <!-- Python Video -->
             <article class="video-card">
@@ -52,7 +52,7 @@
                         </div>
                         <div class="meta-text">
                             <span class="channel-name">Programming with Mosh</span>
-                            <span class="video-stats">43M views • 6 year ago</span>
+                            <span class="video-stats">43M views • 6 years ago</span>
                         </div>
                     </div>
                 </div>
