--- a/e2.html
+++ b/e2.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main-content">
-        <h1 style="color: #2596be;">Best programming courses :</h1>
+        <h1 style="color: #2596be;">Best concepts courses :</h1>
         <div class="video-grid">
             <!-- Python Video -->
             <article class="video-card">
@@ -52,7 +52,7 @@
                         </div>
                         <div class="meta-text">
                             <span class="channel-name">Beau Carnes</span>
-                            <span class="video-stats">24K views • 4 Months ago</span>
+                            <span class="video-stats">24K views • 4 months ago</span>
                         </div>
                     </div>
                 </div>
