--- a/e4.html
+++ b/e4.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="meta-text">
                             <span class="channel-name">FreeCodeCamp.org</span>
-                            <span class="video-stats">991K views • 3 year ago</span>
+                            <span class="video-stats">991K views • 3 years ago</span>
                         </div>
                     </div>
                 </div>
