--- a/e6.html
+++ b/e6.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main-content">
-        <h1 style="color: #2596be;">Best programming courses :</h1>
+        <h1 style="color: #2596be;">Best applications courses :</h1>
         <div class="video-grid">
             <!-- Python Video -->
             <article class="video-card">
