--- a/e13.html
+++ b/e13.html
@@ -8,13 +8,6 @@
         gtag('js', new Date());
         gtag('config', 'G-060C5XH0S8');
     </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-060C5XH0S8"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-060C5XH0S8');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Coding-EduMaster - Learn programming through high-quality video tutorials">
@@ -42,7 +35,7 @@
     </header>
 
     <main class="main-content">
-        <h1 style="color: #2596be;">Best programming courses :</h1>
+        <h1 style="color: #2596be;">Best frontend courses :</h1>
         <div class="video-grid">
             <!-- Python Video -->
             <article class="video-card">
