--- a/e14.html
+++ b/e14.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main-content">
-        <h1 style="color: #2596be;">Best programming courses :</h1>
+        <h1 style="color: #2596be;">Best backend courses :</h1>
         <div class="video-grid">
             <!-- Python Video -->
             <article class="video-card">
@@ -52,7 +52,7 @@
                         </div>
                         <div class="meta-text">
                             <span class="channel-name">Neso Academy</span>
-                            <span class="video-stats">1.8 views • 4 years ago</span>
+                            <span class="video-stats">1.8M views • 4 years ago</span>
                         </div>
                     </div>
                 </div>
